@@ -486,6 +486,20 @@
 									</tr>
 									</table>
 									<span data-i18n="To get a free account/API key click"></span> <a class="norm-link" href="http://www.clickatell.com/" target="_blank"><span class="norm-link" data-i18n="Here"></span></a><br>
+									<br />
+									<br />
+									<h2><span>IFTTT</span>:</h2>
+									<table class="display" id="ifttttable" border="0" cellpadding="0" cellspacing="0">
+										<tr>
+											<td align="right" style="width:80px"><label><span data-i18n="Enabled"></span>: </label></td>
+											<td><input type="checkbox" id="IFTTTEnabled" name="IFTTTEnabled" /></td>
+										</tr>
+										<tr>
+											<td align="right"><label><span data-i18n="API Key">API Key</span>: </label></td>
+											<td><input type="input" id="IFTTTAPI" name="IFTTTAPI" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
+										</tr>
+									</table>
+									<span data-i18n="Create a Maker/Webhook">Create a Maker/Webhook</span> <a class="norm-link" href="https://ifttt.com/maker_webhooks" target="_blank"><span class="norm-link" data-i18n="Here"></span></a><br>
 									<br>
 								</div>
 								<div class="span6">
